[gd_scene load_steps=37 format=3 uid="uid://bunpc3i8oksqf"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8echh"]
[ext_resource type="Texture2D" uid="uid://v383u1hssg8j" path="res://Assets/Player/Bruce_idle_48x48.png" id="1_216pi"]
[ext_resource type="PackedScene" uid="uid://osvpu1jap7kp" path="res://Scenes/UI/collecteditems.tscn" id="2_2pvh1"]
[ext_resource type="Texture2D" uid="uid://ogcxafbemuoi" path="res://Assets/light.png" id="3_3ft0o"]
[ext_resource type="Texture2D" uid="uid://dyd7ew6gi2t1u" path="res://Assets/Player/Bruce_run_48x48.png" id="3_aydij"]
[ext_resource type="Texture2D" uid="uid://c1i2o3s163hm5" path="res://Assets/cone-light.png" id="3_dnh0x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g6juj"]
atlas = ExtResource("1_216pi")
region = Rect2(0, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4cyx"]
atlas = ExtResource("1_216pi")
region = Rect2(48, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhdhj"]
atlas = ExtResource("1_216pi")
region = Rect2(96, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfos2"]
atlas = ExtResource("1_216pi")
region = Rect2(144, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucp0c"]
atlas = ExtResource("3_aydij")
region = Rect2(864, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jn6o"]
atlas = ExtResource("3_aydij")
region = Rect2(912, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfgd8"]
atlas = ExtResource("3_aydij")
region = Rect2(960, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiiov"]
atlas = ExtResource("3_aydij")
region = Rect2(1008, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v063h"]
atlas = ExtResource("3_aydij")
region = Rect2(1056, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6m8d"]
atlas = ExtResource("3_aydij")
region = Rect2(1104, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a07ee"]
atlas = ExtResource("3_aydij")
region = Rect2(576, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5i4w"]
atlas = ExtResource("3_aydij")
region = Rect2(624, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j61jx"]
atlas = ExtResource("3_aydij")
region = Rect2(672, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v63a4"]
atlas = ExtResource("3_aydij")
region = Rect2(720, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqsr3"]
atlas = ExtResource("3_aydij")
region = Rect2(768, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb3i4"]
atlas = ExtResource("3_aydij")
region = Rect2(816, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yiax"]
atlas = ExtResource("3_aydij")
region = Rect2(0, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gb3x"]
atlas = ExtResource("3_aydij")
region = Rect2(48, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r058i"]
atlas = ExtResource("3_aydij")
region = Rect2(96, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjne"]
atlas = ExtResource("3_aydij")
region = Rect2(144, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6txt"]
atlas = ExtResource("3_aydij")
region = Rect2(192, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_74rbk"]
atlas = ExtResource("3_aydij")
region = Rect2(240, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxqhw"]
atlas = ExtResource("3_aydij")
region = Rect2(288, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaslk"]
atlas = ExtResource("3_aydij")
region = Rect2(336, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_anrol"]
atlas = ExtResource("3_aydij")
region = Rect2(384, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1wly"]
atlas = ExtResource("3_aydij")
region = Rect2(432, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8llm8"]
atlas = ExtResource("3_aydij")
region = Rect2(480, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_77esh"]
atlas = ExtResource("3_aydij")
region = Rect2(528, 0, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qyj60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6juj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4cyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhdhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfos2")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucp0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jn6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfgd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiiov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v063h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6m8d")
}],
"loop": true,
"name": &"Run_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a07ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5i4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j61jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v63a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqsr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb3i4")
}],
"loop": true,
"name": &"Run_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yiax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gb3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r058i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6txt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74rbk")
}],
"loop": true,
"name": &"Run_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaslk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anrol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1wly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8llm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77esh")
}],
"loop": true,
"name": &"Run_Up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_88fb7"]
height = 44.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 6
motion_mode = 1
script = ExtResource("1_8echh")

[node name="FlashLight" type="PointLight2D" parent="."]
position = Vector2(55.9311, 14.0847)
rotation = -1.57613
scale = Vector2(10.7168, 6.28722)
color = Color(0.964417, 0.967901, 0.972848, 1)
energy = 1.9
range_layer_max = 6
range_item_cull_mask = 3
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 1
shadow_filter_smooth = 2.6
texture = ExtResource("3_dnh0x")
texture_scale = 0.01
height = 90.0

[node name="CollectedItems" parent="." instance=ExtResource("2_2pvh1")]
offset_left = 57.0
offset_top = 52.0
offset_right = 57.0
offset_bottom = 52.0

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qyj60")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 26)
shape = SubResource("CapsuleShape2D_88fb7")

[node name="PlayerLight" type="PointLight2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(0.138672, 0.149414)
color = Color(0.813258, 0.813258, 0.813258, 1)
energy = 1.5
texture = ExtResource("3_3ft0o")
texture_scale = 1.3

[node name="LightPivot" type="Node2D" parent="."]
position = Vector2(-3, 21)
